force-app/main/default/objects/Bicycle__c/Bicycle__c.object-meta.xml
<CustomObject>
    <description>This is an object used to track the bicycles that our business sells.</description>
    <label>Bicycle</label>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>