force-app/main/default/objects/Bicycle__c/fields/Custom_Build__c.field-meta.xml
<CustomField>
    <fullName>Custom_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Build</label>
    <type>Checkbox</type>
</CustomField>