force-app/main/default/objects/Bicycle__c/fields/Limited_Edition__c.field-meta.xml
<CustomField>
    <fullName>Limited_Edition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Edition</label>
    <type>Checkbox</type>
</CustomField>