force-app/main/default/objects/Bicycle__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>